Updated version of javafx to 17