@@ -25,17 +25,9 @@ dependencies {
 }
 
 javafx{
+    version = '17'
 	modules = ['javafx.fxml', 'javafx.controls', 'javafx.graphics', 'javafx.web']
 }
-
-//run {
-//    jvmArgs = ['--add-exports=javafx.web/com.sun.webkit=ALL-UNAMED']
-//}
-
-//run {
-//    applicationDefaultJvmArgs = ['--add-exports=javafx.web/com.sun.webkit=ALL-UNAMED'] 
-//     jvmArgs = ['--add-exports=javafx.web/com.sun.webkit=ALL-UNAMED']
-//}
 
 application {
     mainClass = 'com.epa.erb.App'
